--- a/web-app/index.html
+++ b/web-app/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>web-app</title>
+        <title>联邦学习</title>
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/main.tsx"></script>
+        <script>
+            const  Robo_API_KEY='2323';  <script/>
+                  <script type="module" src="/src/main.tsx">
+        </script>
     </body>
 </html>
